# memes

./: .gitignore  README.md  install.py  me.memes.collection.json  meme  meme-capture  meme-from-clip  meme-list  meme-native-host  meme-pick  meme-rename  meme-trash  meme-tui  meme.py  picker.py  pyproject.toml  server.py  setup-browser.sh  tui_app.py
meme/: __init__.py  __main__.py  capture.py  cli.py  clipboard.py  config.py  list.py  native_host.py  pick.py  platform.py  rename.py  serve.py  server_client.py  trash.py
meme-browser/: background.js  manifest.json
