[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meme-collection"
version = "4.0"
description = "Cross-platform meme collection manager — CLI, browser extension, screen capture"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["meme", "cli", "screenshot", "clipboard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=10.0",
    "mss>=9.0",
]

[project."optional-dependencies"]
notify = ["plyer>=2.1"]
serve = []  # stdlib only, no extra deps
all = ["plyer>=2.1"]
dev = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/tuan-cre/memes"

[project.scripts]
meme = "meme.cli:main"
meme-pick = "meme.cli:main"
meme-list = "meme.cli:main"
meme-capture = "meme.cli:main"
meme-from-clip = "meme.cli:main"
meme-rename = "meme.cli:main"
meme-trash = "meme.cli:main"
meme-native-host = "meme.cli:main"

[tool.setuptools]
packages = ["meme"]
